Fix rate elements alignment

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ footer {
   display: flex;
   background: var(--light-gray-magenta);
   color: var(--very-dark-magenta);
-  width: 420px;
+  width: 415px;
   height: 60px;
   align-items: center;
   padding-left: 30px;
@@ -87,11 +87,11 @@ footer {
 }
 
 .rate:first-child {
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 .rate:nth-child(2) {
-  margin-left: 55px;
+  margin-left: 63px;
 }
 
 .rate:nth-child(3) {
